prepare to clone, control visibility, fix scroll modal

--- a/src/pages/home/styles/card.css
+++ b/src/pages/home/styles/card.css
@@ -80,6 +80,11 @@
     background-color: #e9858a;
 }
 
+.badge-template {
+    color: white;
+    background-color: #e06b3c;
+}
+
 .border-collab {
     border-color: #e9858a;
 }
